--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -55,7 +55,6 @@ form fieldset {
 
 form legend {
     margin-bottom: 40px;
-    border: 0;
 }
 
 form legend h2{
@@ -74,7 +73,8 @@ form .field-group {
     display: flex;
 }
 
-form input, form select {
+form input, 
+form select {
     background-color: #f0f0f5;
 
     border: 0;
@@ -125,4 +125,51 @@ form button {
 form button:houver {
     background-color: #2fb86e;
 }   
-    
+
+.items-grid {
+    display: grid; /*Consegue criar linhas e colunas*/
+    grid-template-columns: 1fr 1fr 1fr;/*3 colunas, fr fração*/
+    gap: 16px; /*Margem para grid*/
+}
+
+.items-grid li {
+    background-color: #f5f5f5;
+    list-style: none; /*Retira as bolinhas de lista*/
+
+    border: 2px solid #f5f5f5;
+    border-radius: 8px;
+
+    height: 180px;
+
+    padding: 32px 24px 16px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    text-align: center;
+
+    cursor: pointer; /*Mostra a mãozinha ao passar o cursor*/
+}
+
+.items-grid li span {
+    margin-top: 12px;
+    flex: 1;
+
+    display: flex;
+    align-items: center;
+
+    color: var(--title-color);
+}
+
+.items-grid li.selected {
+    background: #e1faec;
+    border: 2px solid #34cb79;
+}
+
+.items-grid li img,
+.items-grid li span {
+    pointer-events: none;
+
+}
